try 2 on fixing extra space in impact box for mobile version

--- a/style.css
+++ b/style.css
@@ -2117,3 +2117,10 @@ body {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+
+.impact-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
